[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/EndLevel.gd" type="Script" id=1]
[ext_resource path="res://ui/level_complete.wav" type="AudioStream" id=2]
[ext_resource path="res://ui/level_fail.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Fade"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.678431 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Restart:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("NextLevel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Menu:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="EndLevel" type="Node2D"]
pause_mode = 2
z_index = 100
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0, 0, 0, 0.678431 )
polygon = PoolVector2Array( 0, 0, 0, 304, 512, 304, 512, 0 )

[node name="Label" type="Label" parent="."]
margin_left = 200.0
margin_top = 104.0
margin_right = 313.0
margin_bottom = 118.0
text = "All the Toms died"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Fade"
anims/Fade = SubResource( 1 )

[node name="Restart" type="Button" parent="."]
margin_left = 208.0
margin_top = 208.0
margin_right = 303.0
margin_bottom = 228.0
text = "Restart Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevel" type="Button" parent="."]
margin_left = 208.0
margin_top = 168.0
margin_right = 303.0
margin_bottom = 188.0
disabled = true
text = "Next Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="."]
margin_left = 208.0
margin_top = 248.0
margin_right = 303.0
margin_bottom = 268.0
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="LoseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="pressed" from="Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="NextLevel" to="." method="_on_NextLevel_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
